Fix DateTimeType deprecations (#7948)
Related to:

* https://github.com/openhab/openhab-core/pull/1500
* https://github.com/openhab/openhab-addons/pull/7918

Signed-off-by: Wouter Born <github@maindrain.net>
Signed-off-by: Sven Strohschein <sven.strohschein@gmail.com>